# hw_2

./: home_credit_cfg_parser.py  home_credit_db_cred.ini  hw_2.ipynb  pyproject.toml
